[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fujielab-asr"
description = "Automatic Speech Recognition (ASR) tools for Fujielab"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
version = "0.9.0"

[tool.setuptools.packages.find]
exclude = ["data", "examples"]
